--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.6",
-    "@prisma/client": "^4.9.0",
+    "@prisma/client": "^4.10.1",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
