--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv-cli": "^7.0.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "next-redux-wrapper": "^8.1.0",
