--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26"
